<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="display_event_notifications"
        android:summary="@string/preference_display_event_notifications_summary"
        android:title="@string/preference_display_event_notifications_title" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="display_homework_notification"
        android:summary="@string/preference_display_homework_notification_summary"
        android:title="@string/preference_display_homework_notification_title" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="display_lesson_notification"
        android:summary="@string/preference_display_lesson_notification_summary"
        android:title="@string/preference_display_lesson_notification_title" />

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/languagesArray"
        android:entryValues="@array/languagesValues"
        android:key="language_selection"
        android:summary="@string/preference_language_switcher_summary"
        android:title="@string/preference_language_switcher_title" />

    <Preference
        android:key="log_out_button"
        android:summary="@string/preference_log_out_summary"
        android:title="@string/preference_log_out" />
</PreferenceScreen>